--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,8 +20,8 @@
     <header>
       <div class="inner">
         <h1> {{ site.name }} </h1>
-        <h2>My very first stepping stone towards freelancing</h2>
-        <a href="https://github.com/pietromenna/jekyll-architect-theme" class="button"><small>View project on</small> GitHub</a>
+        <h2>Making applications that meets<br>\tthe clients needs</h2>
+        <a href="https://github.com/ecgrepollo/ecgrepollo.github.io.git" class="button"><small>View project on</small> GitHub</a>
       </div>
     </header>
 
@@ -34,15 +34,6 @@
         </section>
 
         <aside id="sidebar">
-          <a href="https://github.com/pietromenna/jekyll-architect-theme/archive/master.zip" class="button">
-            <small>Download</small>
-            .zip file
-          </a>
-          <a href="https://github.com/pietromenna/jekyll-architect-theme/archive/master.tar.gz" class="button">
-            <small>Download</small>
-            .tar.gz file
-          </a>
-
           <p class="repo-owner"><a href="https://github.com/jasonlong/architect-theme">architect-theme</a> is maintained by <a href="https://github.com/jasonlong">jasonlong</a>.</p>
 
           <p class="repo-owner"><a href="https://github.com/pietromenna/jekyll-architect-theme">jekyll-architect-theme</a> is maintained by <a href="https://github.com/pietromenna">pietromenna</a>.</p>
