--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,7 +20,7 @@
     <header>
       <div class="inner">
         <h1> {{ site.name }} </h1>
-        <h2>Making applications that meets<br>/t the clients needs</h2>
+        <h2>Making applications that meets<br> the client's needs...</h2>
         <a href="https://github.com/ecgrepollo/ecgrepollo.github.io.git" class="button"><small>View project on</small> GitHub</a>
       </div>
     </header>
