--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,9 +19,10 @@
   <body>
     <header>
       <div class="inner">
-        <h1> {{ site.name }} </h1>
+        <a href="http://ecgrepollo.github.io"><h1> {{ site.name }} </h1></a>
         <h2>Making applications that meets<br> the client's needs...</h2>
         <a href="https://github.com/ecgrepollo/ecgrepollo.github.io.git" class="button"><small>View project on</small> GitHub</a>
+        <a href=""></a>
       </div>
     </header>
 
